# libliteidmef

./: .gitattributes  COPYRIGHT  INSTALL  Makefile  Makefile.in  NEWS  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: libliteidmef_api.odp
src/: Makefile  Makefile.am  Makefile.in  idmef_plugin.c  idmef_plugin.h  idmef_plugin.lo  idmef_server.c  idmef_server.lo  libliteidmef-0.1.pc  libliteidmef-0.1.pc.in  libliteidmef.la  stack.lo
src/.deps/: idmef_plugin.Plo  idmef_server.Plo  stack.Plo
src/.libs/: libliteidmef.la  libliteidmef.lai  libliteidmef.so.0.0.1
src/commons/: stack.c  stack.h  utils.h
test/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  console_2.c  console_2_out.idmef  console_3.c  console_3_out.idmef  console_4.c  console_4_out.idmef  console_5.c  console_5_out.idmef  idmef_console_2  idmef_console_3  idmef_console_4  idmef_console_5  idmef_sender_1  idmef_sender_2  idmef_sender_3  idmef_sender_4  idmef_sender_5  libtool  sender_1.c  sender_2.c  sender_3.c  sender_4.c  sender_5.c
test/.deps/: console.Po  console_1.Po  console_2.Po  console_3.Po  console_4.Po  console_5.Po  sender_1.Po  sender_2.Po  sender_3.Po  sender_4.Po  sender_5.Po
test/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
