AUTOMAKE_OPTIONS = foreign

AM_CPPFLAGS = -I../../ids/src/commons

#Link samples with static lib.
noinst_PROGRAMS			= idmef_sender_1 idmef_sender_2 idmef_console_2 idmef_sender_3 idmef_console_3\
									idmef_sender_4 idmef_console_4 idmef_sender_5 idmef_console_5 

idmef_sender_1_SOURCES	= sender_1.c 
idmef_sender_1_LDFLAGS	= -lliteidmef -all-static 

idmef_sender_2_SOURCES	= sender_2.c 
idmef_sender_2_LDFLAGS	= -lliteidmef -all-static 
idmef_console_2_SOURCES	= console_2.c 
idmef_console_2_LDFLAGS	= -lliteidmef -all-static 

idmef_sender_3_SOURCES	= sender_3.c 
idmef_sender_3_LDFLAGS	= -lliteidmef -all-static 
idmef_console_3_SOURCES	= console_3.c 
idmef_console_3_LDFLAGS	= -lliteidmef -all-static 

idmef_sender_4_SOURCES	= sender_4.c 
idmef_sender_4_LDFLAGS	= -lliteidmef -all-static 
idmef_console_4_SOURCES	= console_4.c 
idmef_console_4_LDFLAGS	= -lliteidmef -all-static 

idmef_sender_5_SOURCES	= sender_5.c 
idmef_sender_5_LDFLAGS	= -lliteidmef -all-static 
idmef_console_5_SOURCES	= console_5.c 
idmef_console_5_LDFLAGS	= -lliteidmef -all-static 





#ANNEX
#=====
#Link samples with shared lib.
#noinst_PROGRAMS				= idmef_console
#idmef_console_SOURCES	= utils.h console.c 
#idmef_console_LDFLAGS	= -lliteidmef 
